k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chatbotai
  labels:
    app: chatbotai
